<resources>
    <string name="app_name">Labo05</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_billboard">Billboard</string>
    <string name="btn_description_add_new_movie">Add New Movie</string>
    <string name="movie1_tittle">Star Wars episodio: La venganza de los Sith</string>
    <string name="movie2_tittle">Harry Potter y la piedra filosofal</string>
    <string name="tittle_movie1">Star Wars Movie</string>
    <string name="movie1_description">La pelicula se centra en el personaje de Anakin Skywalker, quien esta siento tentado por el Imperio Galactico comienza a surgir. La trama tambien muestra la caida de la Republica Galactica y el ascenso del Emperador Palpatine</string>
    <string name="movie1_category">Ciencia Ficcion</string>
    <string name="rating_movie1">9.8</string>
    <string name="rating_movie2">9.5</string>
    <string name="addNewBtn_text">Add new movie</string>
    <string name="tittle_new_movie">New Movie</string>
    <string name="Description_hint_text">Description</string>
    <string name="name_hint_text">Name</string>
    <string name="category_hint_text">Category</string>
    <string name="Rating_hint_text">Calification</string>
    <string name="sumbitBtn_text">Sumbit</string>

</resources>