<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".billboardFragment"
    android:padding="@dimen/general_gap">


    <TextView
        android:id="@+id/tittle_fragment_billboard"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginBottom="@dimen/medium_gap"
        android:gravity="center"
        android:text="@string/tittle_billboard"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:padding="@dimen/general_gap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle_fragment_billboard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_movie1_sw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_gap"
                android:padding="@dimen/general_gap"
                app:cardBackgroundColor="@color/cardLayout"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/movie1_pic"
                        android:layout_width="452dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.8"
                        android:contentDescription="@string/movie1_tittle"
                        android:padding="@dimen/small_gap"
                        android:src="@drawable/star_wars" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/general_gap"
                        android:paddingVertical="@dimen/small_gap">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie1_tittle"
                            android:textColor="@color/white"
                            android:textSize="@dimen/mediumSize_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/cardLayout"
                            android:text="@string/rating_movie1"
                            android:textColor="@color/rating"
                            android:textSize="@dimen/largeSize_text"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_gap"
                app:cardBackgroundColor="@color/cardLayout"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/small_gap"
                   >

                    <ImageView
                        android:id="@+id/movie2_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1.8"
                        android:src="@drawable/harry_potter"
                        android:padding="@dimen/small_gap"
                        android:contentDescription="@string/movie2_tittle"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/general_gap"
                        android:paddingVertical="@dimen/small_gap">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie2_tittle"
                            android:textColor="@color/white"
                            android:textSize="@dimen/mediumSize_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/cardLayout"
                            android:text="@string/rating_movie2"
                            android:textColor="@color/rating"
                            android:textSize="@dimen/largeSize_text"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_new_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/general_gap"
        android:contentDescription="@string/addNewBtn_text"
        android:src="@drawable/add_icon"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
