<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newMovieFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/backgroundLayout"
        android:padding="@dimen/general_gap"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/display_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_gap"
            android:layout_marginEnd="@dimen/general_gap"
            android:gravity="center"
            android:text="@string/tittle_new_movie"
            android:textColor="@color/white"
            android:textSize="@dimen/largeSize_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125"
            tools:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_gap"
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_marginEnd="@dimen/general_gap"
            android:hint="@string/name_hint_text"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/display_textView"
            app:layout_constraintStart_toStartOf="@+id/display_textView"
            app:layout_constraintTop_toBottomOf="@+id/display_textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_gap"
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_marginEnd="@dimen/general_gap"
            android:backgroundTint="@color/cardLayout"
            android:hint="@string/category_hint_text"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/cardLayout"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_name"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_name"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout"
                android:padding="@dimen/general_gap"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_descpription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_gap"
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_marginEnd="@dimen/general_gap"
            android:backgroundTint="@color/cardLayout"
            android:hint="@string/Description_hint_text"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/cardLayout"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_category"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_category"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_category">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_calification"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_gap"
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_marginEnd="@dimen/general_gap"
            android:backgroundTint="@color/cardLayout"
            android:hint="@string/Rating_hint_text"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/cardLayout"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_descpription"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_descpription"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_descpription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_gap"
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_marginBottom="@dimen/large_gap"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/sumbitBtn_text"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/small_gap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_calification"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_calification"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_calification"
            tools:cornerRadius="8dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>